layout bugfix, scroll areas and message input

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Discord clone - Vue 3 + Vite + TailwindCSS </title>
 </head>
 
-<body class="bg-discord-dark-2">
-  <div id="app"></div>
+<body class="bg-discord-dark-2 h-screen w-screen">
+  <div id="app" class="h-full overflow-hidden"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
