refactor icons to iconify

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Discord clone - Vue 3 + Vite + TailwindCSS </title>
 </head>
 
-<body class="bg-discord-dark-2 h-screen w-screen">
+<body class="bg-discord-dark-2 h-dvh w-screen">
   <div id="app" class="h-full overflow-hidden"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
